--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "web-vitals": "^1.0.1"
