--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "web-vitals": "^1.0.1"
