--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
+    "react-counter": "^1.1.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
